force-app/main/default/objects/APIParameter__mdt/APIParameter__mdt.object-meta.xml
<CustomObject>
    <label>API Parameter</label>
    <pluralLabel>API Parameters</pluralLabel>
</CustomObject>