force-app/main/default/objects/APIParameter__mdt/fields/ClientCertificateName__c.field-meta.xml
<CustomField>
    <fullName>ClientCertificateName__c</fullName>
    <description>Sets if the external service requires a client certificate for authentication, set the certificate name.</description>
    <label>Client Certificate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>