force-app/main/default/objects/APIParameter__mdt/fields/ClientKey__c.field-meta.xml
<CustomField>
    <fullName>ClientKey__c</fullName>
    <description>The client key used for this request.</description>
    <label>Client Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>