force-app/main/default/objects/APIParameter__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>The client secret for this request.</description>
    <label>Client Secret</label>
    <length>80</length>
    <type>Text</type>
</CustomField>