force-app/main/default/objects/APIParameter__mdt/fields/Compression__c.field-meta.xml
<CustomField>
    <fullName>Compression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a response comes back in compressed format, getBody recognizes the format, uncompresses it, and returns the uncompressed value.
If true, the request body is compressed, false otherwise.</description>
    <label>Compression</label>
    <type>Checkbox</type>
</CustomField>