force-app/main/default/objects/APIParameter__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>Possible values for the endpoint:
Endpoint URL
    https://my_endpoint.example.com/some_path
Named credential URL, which contains the scheme callout, the name of the named credential, and, optionally, an appended path
    callout:My_Named_Credential/some_path</description>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>