force-app/main/default/objects/APIParameter__mdt/fields/EnvironmentType__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentType__c</fullName>
    <description>Select the environment name for integration to work.</description>
    <inlineHelpText>Select the environment name for integration to work.</inlineHelpText>
    <label>Environment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>