force-app/main/default/objects/APIParameter__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Sets the contents of the request header.</description>
    <label>Header</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>