force-app/main/default/objects/APIParameter__mdt/fields/RequestMethod__c.field-meta.xml
<CustomField>
    <fullName>RequestMethod__c</fullName>
    <description>Add request method for making a callout, examples of return values:
DELETE
GET
HEAD
POST
PUT
TRACE</description>
    <label>Request Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>