force-app/main/default/objects/APIParameter__mdt/fields/SampleJsonRequest__c.field-meta.xml
<CustomField>
    <fullName>SampleJsonRequest__c</fullName>
    <description>Sample JSON Request structure</description>
    <label>Sample Json Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>