force-app/main/default/objects/APIParameter__mdt/fields/SampleJsonResponse__c.field-meta.xml
<CustomField>
    <fullName>SampleJsonResponse__c</fullName>
    <description>Sample JSON Response structure</description>
    <label>Sample Json Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>