force-app/main/default/objects/APIParameter__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Sets the timeout in milliseconds for the request. The timeout can be any value between 1 and 120,000 milliseconds.</description>
    <inlineHelpText>Sets the timeout in milliseconds for the request.</inlineHelpText>
    <label>Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>